Practica01-Mi-Blog

--- a/consolas.html
+++ b/consolas.html
@@ -17,16 +17,15 @@
  
 <body> 
     <header>
-        <img src="imagenes/videojuegos.jpg"  alt="Curbside Thai" />
+        <a href="index.html"><img src="imagenes/consolas.jpg"  alt="Curbside Thai" /></a>
          
         <nav>    
             <ul>       
                 <li><a href="videojuegos.html">Videojuegos</a></li>       
                 <li><a href="consolas.html">Consolas</a></li>       
-                <li><a href="ct_menu.html">Perifericos</a></li>       
-                <li><a href="ct_reviews.html">VR</a></li>       
-                <li><a href="ct_catering.html">Streamer</a></li>       
-                <li><a href="ct_contact.html">Torneos</a></li>    
+                <li><a href="perifericos.html">Perifericos</a></li>       
+                <li><a href="vr.html">VR</a></li>       
+                <li><a href="torneos.html">Torneos</a></li>    
             </ul> 
         </nav>
     </header>    
@@ -36,7 +35,10 @@
 
     </article>
      
-    <footer>Curbside Thai &#8226;  411 Belde Drive, Charlotte NC &nbsp;  28201 &#8226;  704-5551151 </footer> 
+    <footer>Yupanki Medina Malki Katari 
+        &#8226;  Universidad Pilitecnica salesiana &#8226; <br/>
+        <a href="mailto:malkiyupanki12@hotmail.com">malkiyupanki12@hotmail.com</a> Telefono: <a href="tel:098-286-5431">098-286-5431 </a>
+    </footer> 
 </body> 
  
 </html
