--- a/torneos.html
+++ b/torneos.html
@@ -35,9 +35,10 @@
 
     </article>
      
-    <footer>Yupanki Medina Malki Katari 
+    <footer>Yupanki Medina Malki Katari &nbsp;
         &#8226;  Universidad Pilitecnica salesiana &#8226; <br/>
-        <a href="mailto:malkiyupanki12@hotmail.com">malkiyupanki12@hotmail.com</a> Telefono: <a href="tel:098-286-5431">098-286-5431 </a>
+        <a href="mailto:malkiyupanki12@hotmail.com">malkiyupanki12@hotmail.com</a>&nbsp;&nbsp;Telefono:&nbsp;<a href="tel:098-286-5431">098-286-5431 </a>
+        &nbsp; &copy; Todos los derechos Reservados.
     </footer>
 </body> 
  
