--- a/torneos.html
+++ b/torneos.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html> <html> 
  
 <head>
-    <!--  New Perspectives on HTML5 and CSS3, 7th Edition
-          Tutorial 1 
-          Tutorial Case  General 
-          Information about Curbside Thai  
+    <!--  Practica01 – Mi Blog  
           Author: Malki Yupanki  
-          Date:   Abril 2019
- 
-          Filename: ct_about.html --> 
+          Date:   Abril 2019 --> 
         <meta charset="utf-8" /> 
-        <meta name="keywords"   content="Thai, restaurant, Charlotte, food" /> 
         <title>Practica01 – Mi Blog</title> 
         
 </head> 
