--- a/videojuegos.html
+++ b/videojuegos.html
@@ -11,24 +11,37 @@
  
 <body> 
     <header>
-        <a href="index.html"><img src="imagenes/juegos.jpg"  alt="Curbside Thai" /></a>
-         
-        <nav>    
-            <ul>       
-                <li><a href="videojuegos.html">Videojuegos</a></li>       
-                <li><a href="consolas.html">Consolas</a></li>       
-                <li><a href="perifericos.html">Perifericos</a></li>       
-                <li><a href="vr.html">VR</a></li>       
-                <li><a href="torneos.html">Torneos</a></li>    
-            </ul> 
-        </nav>
+        <a href="index.html"><img src="imagenes/video-juegos1.jpg"  alt="Curbside Thai" /></a>
     </header>    
-    <article>
-        <h1>About use</h1>
-        <p>Que hondaaaaaaaaaaaa</p>
-
-    </article>
-     
+    <nav>
+        <ul>       
+            <li><a href="videojuegos.html">Videojuegos</a></li>       
+            <li><a href="consolas.html">Consolas</a></li>       
+            <li><a href="perifericos.html">Perifericos</a></li>       
+            <li><a href="vr.html">VR</a></li>       
+            <li><a href="torneos.html">Torneos</a></li>    
+        </ul> 
+    </nav>
+    <section>   
+        <article>
+            <h1>Los Videojuegos</h1>
+            <p>Ln videojuego es una aplicación interactiva orientada al entretenimiento que, a través de ciertos mandos o controles, permite simular experiencias en la pantalla de un televisor, una computadora u otro dispositivo electrónico.</p>
+            <p>Los videojuegos se diferencian de otras formas de entretenimiento, como ser las películas, en que deben ser interactivos; en otras palabras, los usuarios deben involucrarse activamente con el contenido. Para ello, es necesario utilizar un mando (también conocido como gamepad o joystick), mediante el cual se envían órdenes al dispositivo principal (un ordenador o una consola especializada) y estas se ven reflejadas en una pantalla con el movimiento y las acciones de los personajes.</p>
+            <img src="imagenes/juegos.jpg" alt=""/>
+        </article>
+        <aside>
+            <p>Los videojuegos tu escape de la realidad</p>
+        </aside>
+        <aside>
+            <p>Una victoria a la vez...</p>
+        </aside>
+    </section>
+    <section>
+        <aside>
+            <p>Los videojuegos ayudan a incrementar tus reflejos    
+            </p>
+        </aside>
+    </section>
     <footer>Yupanki Medina Malki Katari &nbsp;
         &#8226;  Universidad Pilitecnica salesiana &#8226; <br/>
         <a href="mailto:malkiyupanki12@hotmail.com">malkiyupanki12@hotmail.com</a>&nbsp;&nbsp;Telefono:&nbsp;<a href="tel:098-286-5431">098-286-5431 </a>
