Practica01-Mi-Blog

--- a/consolas.html
+++ b/consolas.html
@@ -11,28 +11,30 @@
  
 <body> 
     <header>
-        <a href="index.html"><img src="imagenes/video-juegos1.jpg"  alt="Curbside Thai" /></a>
+        <a href="index.html"><img src="imagenes/video-juegos1.jpg" width="1080" height="580" alt="Curbside Thai" /></a>
     </header>
     <nav>
-        <ul>       
+        <ol>       
             <li><a href="videojuegos.html">Videojuegos</a></li>       
             <li><a href="consolas.html">Consolas</a></li>       
             <li><a href="perifericos.html">Perifericos</a></li>       
             <li><a href="vr.html">VR</a></li>       
             <li><a href="torneos.html">Torneos</a></li>    
-        </ul> 
+        </ol> 
     </nav>
     <section>   
         <article>
         <h1>Consolas para Videojuegos</h1>
-        <p>Las consolas de videojuegos en los ultimos años ah tenido un gran creciemto
+            <p><q>Las consolas de videojuegos en los ultimos años ah tenido un gran creciemto</q>
         devido a la evolucion y creacion de las nuevas tecnologias. Los diferentes equipos que ejecutan juegos
-        poseen un hardware que les permite realizar dichas ejecuciones de juegos.
-        La mayoria de los juegos hoy en dia requieren de grandes unidades de computo.</p>
-        <p>Existen duferentes tipos de consolas que sirven para videojuegos, la mayoria de las computadoras
-            estan pensadas para el trabajo. En los ultimos años grandes companias de computadoras estan sacando al mercado 
+        poseen un hardware que les permite realizar dichas ejecuciones de juegos.<em>las consolas pueden llegar a costar cantidades 
+                exuberantes</em>. 
+                <b id="consolaref">La mayoria de los juegos hoy en dia requieren de grandes unidades de computo.</b><br/>     
+            </p>
+        <p>Existen diferentes tipos de consolas que sirven para videojuegos, la mayoria de las computadoras
+            estan pensadas para el trabajo.En los ultimos años grandes companias de computadoras estan sacando al mercado 
             innovadores equipos que tienen el hardware necesario para brindar una maxima satisfaccion a la hora de jugar un 
-            videojuego</p>
+            videojuego.<i>La felicidad de Ganar no tienen comparacion</i></p>
         <table>
             <tr>
                 <td rowspan="2">Tabla avanzada</td>
@@ -58,7 +60,7 @@
             </tr>
             
         </table>
-            <img src="imagenes/consolas.jpg" alt=""/>
+            <img src="imagenes/consolas.jpg" width="1080" height="580" alt=""/>
         </article>
         <aside>
             <p>El precio de las computadoras dependen del hardware que posee</p>
@@ -71,7 +73,7 @@
     <section>
         <aside>
             <p>
-                Computadoras Gamer: Este termino es usado para describir aquellos equipos que son diseñados especificamente para videojuegos,
+                <strong>Computadoras Gamer</strong>: Este termino es usado para describir aquellos equipos que son diseñados especificamente para videojuegos,
                 pues los procesadores que incorporan al igual que la refrigeracion que necesigtan son muy altas. Este 
                 tipo de conputadoras integran tarjetas grafias que ayudan a la correcta ejecucion del videojuego.
             </p>
