--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
 <body> 
     <header>
-        <a href="index.html"><img src="imagenes/video-juegos1.jpg"  alt="Curbside Thai" /></a>
+        <a href="index.html"><img src="imagenes/video-juegos1.jpg" width="1080" height="580"  alt="Curbside Thai" /></a>
     </header>    
     <nav>
         <ol>       
@@ -24,19 +24,47 @@
     </nav>
     <section>   
         <article>
-        <h1>Videojuegos</h1>
+            <a href="index.html"><h1>Un Mundo inexplorado...</h1></a>
         <p>Un Mundo donde laimaginacion es el unico limite</p>
-         <p>Un mundo donde la realidad se combina con la ficcion para formar mundos maravillos e impesables
-            donde se puede construr lo que mas deseas.</p>
+         <p>La realidad se combina con la ficcion para formar mundos maravillos e incomparables
+            donde se puede construir lo que mas uno se imagine. El mundo de la tencologia es tan amplio que cada dia se descubre
+            nuevas cosas.</p>
+        </article>
+        <article>
+            <a href="videojuegos.html#videoref"><h1>Videojuegos</h1></a>
+            <p>La ficcion juega un papel importante en el mundo de los videojuegos, la imaginacion nos ayuda a crear 
+            cualquir cosa y la tecnologia nos ayuda hacerla realidad.</p>
+            <img src="imagenes/videojuegosp.jpg"  width="1080" height="580" alt=""/>
+        </article>
+        <article>
+            <a href="consolas.html#consolaref"><h1>Consolas</h1></a>
+            <p>Esta marivillosa creacion del hombre nos ayuda hacer realidad nuestros mas grandes y locos sueños.</p>
+            <img src="imagenes/consolasp.jpg"  width="1080" height="580" alt=""/>
         </article>
         <aside>
-           <p>El Escape del mundo hacia la realidad...</p>
+            <p><em>El Escape del mundo hacia la realidad...</em></p>
         </aside>
         <aside>
-            <p>La creacion de este mundo no tiene limites, los limites los pones tu</p>
+            <p><em>La creacion de este mundo no tiene limites, los limites los pones tu</em></p>
         </aside>
     </section>
     <section>
+        <article>
+        <a href="perifericos.html"><h1>Perifericos</h1></a>
+        <p>Un aliado al momento de cualquier partida, la comodidad y la precision son muy importantes a la hora de jugar.</p>
+            <img src="imagenes/perifericosp.jpg"  width="1080" height="580" alt=""/>
+        </article>
+        <article>
+            <a href="vr.html"><h1>Realidad VIRTUAL</h1></a>
+            <p>La perspectiva del ser humano aumenta para poder tener un entorno deseado.</p>
+            <img src="imagenes/vrp.jpg"  width="1080" height="580" alt=""/>
+        </article>
+        <article>
+            <a href="torneos.html"><h1>Torneos Gamer</h1></a>
+            <p>Preparate para ser el mejor...</p>
+            <img src="imagenes/torneosp.jpg" width="1080" height="580" alt=""/>
+        </article>
+        
         <aside>
             <p>
                 Los videojuegos, la mueva era del entretenimiento para todo el mundo 
