--- a/videojuegos.html
+++ b/videojuegos.html
@@ -11,7 +11,7 @@
  
 <body> 
     <header>
-        <a href="index.html"><img src="imagenes/video-juegos1.jpg"  alt="Curbside Thai" /></a>
+        <a href="index.html"><img src="imagenes/video-juegos1.jpg" width="1080" height="580" alt="Curbside Thai" /></a>
     </header>    
     <nav>
         <ul>       
@@ -27,7 +27,7 @@
             <h1>Los Videojuegos</h1>
             <p>Ln videojuego es una aplicación interactiva orientada al entretenimiento que, a través de ciertos mandos o controles, permite simular experiencias en la pantalla de un televisor, una computadora u otro dispositivo electrónico.</p>
             <p>Los videojuegos se diferencian de otras formas de entretenimiento, como ser las películas, en que deben ser interactivos; en otras palabras, los usuarios deben involucrarse activamente con el contenido. Para ello, es necesario utilizar un mando (también conocido como gamepad o joystick), mediante el cual se envían órdenes al dispositivo principal (un ordenador o una consola especializada) y estas se ven reflejadas en una pantalla con el movimiento y las acciones de los personajes.</p>
-            <img src="imagenes/juegos.jpg" alt=""/>
+            <img src="imagenes/juegos.jpg" width="1080" height="580" alt=""/>
         </article>
         <aside>
             <p>Los videojuegos tu escape de la realidad</p>
@@ -38,7 +38,7 @@
     </section>
     <section>
         <aside>
-            <p>Los videojuegos ayudan a incrementar tus reflejos    
+            <p id="videoref">Los videojuegos ayudan a incrementar tus reflejos    
             </p>
         </aside>
     </section>
