--- a/perifericos.html
+++ b/perifericos.html
@@ -11,7 +11,7 @@
  
 <body> 
     <header>
-        <a href="index.html"><img src="imagenes/video-juegos1.jpg"  alt="Curbside Thai" /></a>
+        <a href="index.html"><img src="imagenes/video-juegos1.jpg" width="1080" height="580" alt="Curbside Thai" /></a>
     </header>    
     <nav>
         <ul>       
@@ -27,7 +27,7 @@
         <h1>Perifericos</h1>
         <p></p>
         <p></p>
-            <img src="imagenes/perifericos.jpg" alt=""/>
+            <img src="imagenes/perifericos.jpg" width="1080" height="580" alt=""/>
         </article>
         <aside>
             <p></p>
