--- a/torneos.html
+++ b/torneos.html
@@ -11,7 +11,7 @@
  
 <body> 
     <header>
-        <a href="index.html"><img src="imagenes/video-juegos1.jpg"  alt="Curbside Thai" /></a>
+        <a href="index.html"><img src="imagenes/video-juegos1.jpg" width="1080" height="580" alt="Curbside Thai" /></a>
     </header>    
     <nav>
         <ul>       
