Practica01-Mi-Blog

--- a/consolas.html
+++ b/consolas.html
@@ -68,7 +68,11 @@
         <aside>
             <p>El mercado de los consolas de videojuegos hoy en dia esta acaparado por PlayStation, Microsoft</p>
         </aside>
-        <iframe src="https://www.youtube.com/embed/pFQPA4J2suE"></iframe>
+        <article>
+            <h1>Construccion de Computadoras</h1>
+            <iframe src="https://www.youtube.com/embed/pFQPA4J2suE"></iframe>
+        </article>
+        
     </section>
     <section>
         <aside>
