--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
     </section>
     <section>
         <article>
-        <a href="perifericos.html"><h1>Perifericos</h1></a>
+        <a href="perifericos.html#refper"><h1>Perifericos</h1></a>
         <p>Un aliado al momento de cualquier partida, la comodidad y la precision son muy importantes a la hora de jugar.</p>
             <img src="imagenes/perifericosp.jpg"  width="1080" height="580" alt=""/>
         </article>
         <article>
-            <a href="vr.html"><h1>Realidad VIRTUAL</h1></a>
+            <a href="vr.html#refvr"><h1>Realidad VIRTUAL</h1></a>
             <p>La perspectiva del ser humano aumenta para poder tener un entorno deseado.</p>
             <img src="imagenes/vrp.jpg"  width="1080" height="580" alt=""/>
         </article>
         <article>
-            <a href="torneos.html"><h1>Torneos Gamer</h1></a>
+            <a href="torneos.html#torneosref"><h1>Torneos Gamer</h1></a>
             <p>Preparate para ser el mejor...</p>
             <img src="imagenes/torneosp.jpg" width="1080" height="580" alt=""/>
         </article>
