--- a/perifericos.html
+++ b/perifericos.html
@@ -25,20 +25,24 @@
     <section>   
         <article>
         <h1>Perifericos</h1>
-        <p></p>
-        <p></p>
+        <p>Los perifericos son dispositivos de hardware que sirven para que el usuario pueda interactuar con la 
+            la computadora. Los principales dispositivos perifericos son el Mouse y teclado, estos dispositivos permiten que e
+            que el usuario pueda interactuar con el computador y su interfaz. El teclado es un dispositovo de hardware que contiene 
+            una estructura que permite al usuario digitar palabras y comandos para que el computador pueda interpretar y ejecutar.</p>
+        <p id="refper">En la actualidad los dispositivos perifericos son diseñados para brindar una mayor precision y ergonomia a los usuarios,
+            se desarrollan dispositivos especializados para juegos los cuales permiten tener un mayor control en el puntero y los juegos.</p>
             <img src="imagenes/perifericos.jpg" width="1080" height="580" alt=""/>
         </article>
         <aside>
-            <p></p>
+            <p>La medida del mouse es en DPI</p>
         </aside>
         <aside>
-            <p></p>
+            <p>Los DPI son unidades de medida por pulgada utilizadas para expresar la velocidad del mouse</p>
         </aside>
     </section>
     <section>
         <aside>
-            <p>
+            <p><strong>Doug Engelbart, creador del ratón de computadora.</strong> El inventor estadounidense desarrolló el ratón de computadora en la década de 1960 y lo patentó en 1970.
             </p>
         </aside>
     </section>
