--- a/torneos.html
+++ b/torneos.html
@@ -25,22 +25,28 @@
     <section>   
         <article>
         <h1>Torneos de Videojuegos</h1>
-        <p>
-        </p>
+            <p>Los torneos de videojuegos en los ultimos años a tenido un gran crecimento devido a las nuevas tecnologias y
+                al uso duario en la tecnologia. Lod diferentes avances tecnologicos nos permiten tener equipos que nos permiten
+                realizar diferentes acctividades. Durante la ultima decada los videojuegos han tenido una gran acojida
+                de tal manera que se generan eventos a nivel mundial de torneos de Videojuegos.
+            </p>
+            <p>El uso de los videojuegos es tan variado, que se utiliza para la eduacacion, medicina y principalmente el entretenimineto,
+            hoy en dia los jovenes pasan horas jugando videojuegos y en los ultimos años los juegos en linea han tenido un crecimineto importante, pues los juegos en equipo son los mas solicitados por los usuarios</p>
+            <p id="torneosref">A nivel mundial se realizan diferentes torneos de videojuegos, el torneo principal es realizado por EA sports que es la
+            compania organizadora de la competencia mas grande del mundo, donde jugadores de diferentes partes del mundo se reunen para
+            poner a prueba sus habilidades frente a una PC.</p>
             <img src="imagenes/torneos.jpg" alt=""/>
-        
         </article>
         <aside>
-            <p></p>
+            <p>Una de las primeras competencias conocidas de videojuegos tuvo lugar el 19 de octubre de 1972 en la Universidad de Stanford para el juego Spacewar.</p>
         </aside>
         <aside>
-            <p></p>
+            <p>Durante los 1970s y los 1980s, los jugadores de video juegos y los torneos comenzaron a aparecer en sitios de internet y revistas populares como Life y Time.</p>
         </aside>
     </section>
     <section>
         <aside>
-            <p>
-            </p>
+            <p>En 2013, el canadiense Danny "Shiphtur" Le se convirtió en el primer jugador profesional de League of Legends en recibir un visado P-1A de Estados Unidos, categoría para los atletas reconocidos internacionalmente.</p>
         </aside>
     </section>
     <footer>Yupanki Medina Malki Katari &nbsp;
