--- a/vr.html
+++ b/vr.html
@@ -25,20 +25,23 @@
     <section>   
         <article>
         <h1>Realidad Virtual</h1>
-        <p></p>
+            <p>La relaidad virtual es la percepcion del hombre de un entorno generado por un software. La relidad virtual 
+            combina escenarios y los ejecuta en tiempor real para aumentar la percepcion del usuario</p>
+            <p>Las aplicaciones que en la actualidad encontramos de la realidad virtual a actividades de la vida cotidiana son muchas y diversas. <strong>Hay que destacar:</strong><em>la reconstrucción de la herencia cultural, la medicina, la simulación de multitudes y la sensación de presencia</em>.&nbsp;Ultimamente la realidad virtual ha llegado a juegos online en los cuales las personas simulan una segunda vida en un mundo virtual, en lo que el realismo conseguido provoca que los individuos durante un tiempo sean otra persona.</p>
+            <p>La realidad virtual se encuentra en su mejor momento. Los cascos de RV como Oculus, HTC o Sony ya han alcanzado un nivel mundial. Ello se debe en parte por los precios que están bajando, lo que hacen más accesible  esta tecnología.</p>
             <img src="imagenes/vr.jpeg" alt=""/>
+            
         </article>
-        <aside>
-            <p></p>
+        <aside id="refvr">
+            <p>Realidad Virtual Inmersa: Este tipo de realidad es donde el usuario se transporta al mundo virtual de tal manera que el usuario puede persivir que se encuentra en otro mundo.</p>
         </aside>
         <aside>
-            <p></p>
+            <p>Realidad Virtual Semi-Inmersa: En este tipo de realidad el usuario interactua con el entrono virtual.</p>
         </aside>
     </section>
     <section>
         <aside>
-            <p>
-            </p>
+            <p>Entornos colaborativos: Este tipo de realidad es donde varios usuarios pueden interactuar en el mismo entorno virtual.</p>
         </aside>
     </section>
     <footer>Yupanki Medina Malki Katari &nbsp;
