Practica01-Mi-Blog

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> 
+<!DOCTYPE html> <html lang="es"> 
  
 <head>
     <!--  Practica01 – Mi Blog  
@@ -22,22 +22,23 @@
             <li><a href="torneos.html">Torneos</a></li>    
         </ol> 
     </nav>
-    <section>   
+    <section> 
+        <h1>Los Videojuegos, Un Mundo inexplorado...</h1>
         <article>
-            <a href="index.html"><h1>Un Mundo inexplorado...</h1></a>
+            <a href="index.html"><h2>El inicio de este mundo...</h2></a>
         <p>Un Mundo donde laimaginacion es el unico limite</p>
          <p>La realidad se combina con la ficcion para formar mundos maravillos e incomparables
             donde se puede construir lo que mas uno se imagine. El mundo de la tencologia es tan amplio que cada dia se descubre
             nuevas cosas.</p>
         </article>
         <article>
-            <a href="videojuegos.html#videoref"><h1>Videojuegos</h1></a>
+            <a href="videojuegos.html#videoref"><h2>Videojuegos</h2></a>
             <p>La ficcion juega un papel importante en el mundo de los videojuegos, la imaginacion nos ayuda a crear 
             cualquir cosa y la tecnologia nos ayuda hacerla realidad.</p>
             <img src="imagenes/videojuegosp.jpg"  width="1080" height="580" alt=""/>
         </article>
         <article>
-            <a href="consolas.html#consolaref"><h1>Consolas</h1></a>
+            <a href="consolas.html#consolaref"><h2>Consolas</h2></a>
             <p>Esta marivillosa creacion del hombre nos ayuda hacer realidad nuestros mas grandes y locos sueños.</p>
             <img src="imagenes/consolasp.jpg"  width="1080" height="580" alt=""/>
         </article>
@@ -49,18 +50,19 @@
         </aside>
     </section>
     <section>
+        <h1>Listo Para Empezar A Jugar...</h1>
         <article>
-        <a href="perifericos.html#refper"><h1>Perifericos</h1></a>
+        <a href="perifericos.html#refper"><h2>Perifericos</h2></a>
         <p>Un aliado al momento de cualquier partida, la comodidad y la precision son muy importantes a la hora de jugar.</p>
             <img src="imagenes/perifericosp.jpg"  width="1080" height="580" alt=""/>
         </article>
         <article>
-            <a href="vr.html#refvr"><h1>Realidad VIRTUAL</h1></a>
+            <a href="vr.html#refvr"><h2>Realidad VIRTUAL</h2></a>
             <p>La perspectiva del ser humano aumenta para poder tener un entorno deseado.</p>
             <img src="imagenes/vrp.jpg"  width="1080" height="580" alt=""/>
         </article>
         <article>
-            <a href="torneos.html#torneosref"><h1>Torneos Gamer</h1></a>
+            <a href="torneos.html#torneosref"><h2>Torneos Gamer</h2></a>
             <p>Preparate para ser el mejor...</p>
             <img src="imagenes/torneosp.jpg" width="1080" height="580" alt=""/>
         </article>
@@ -79,4 +81,4 @@
     </footer> 
 </body> 
  
-</html
+</html>
