--- a/videojuegos.html
+++ b/videojuegos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> 
+<!DOCTYPE html> <html lang="es"> 
  
 <head>
     <!--  Practica01 – Mi Blog  
@@ -22,9 +22,10 @@
             <li><a href="torneos.html">Torneos</a></li>    
         </ul> 
     </nav>
-    <section>   
+    <section>
+        <h1>Los Videojuegos</h1>
         <article>
-            <h1>Los Videojuegos</h1>
+            <h2>Un mundo al alcanze de tus manos...</h2>
             <p>Ln videojuego es una aplicación interactiva orientada al entretenimiento que, a través de ciertos mandos o controles, permite simular experiencias en la pantalla de un televisor, una computadora u otro dispositivo electrónico.</p>
             <p>Los videojuegos se diferencian de otras formas de entretenimiento, como ser las películas, en que deben ser interactivos; en otras palabras, los usuarios deben involucrarse activamente con el contenido. Para ello, es necesario utilizar un mando (también conocido como gamepad o joystick), mediante el cual se envían órdenes al dispositivo principal (un ordenador o una consola especializada) y estas se ven reflejadas en una pantalla con el movimiento y las acciones de los personajes.</p>
             <img src="imagenes/juegos.jpg" width="1080" height="580" alt=""/>
@@ -37,6 +38,7 @@
         </aside>
     </section>
     <section>
+        <h1>En la vida...</h1>
         <aside>
             <p id="videoref">Los videojuegos ayudan a incrementar tus reflejos    
             </p>
@@ -49,4 +51,4 @@
     </footer> 
 </body> 
  
-</html
+</html>
