--- a/vr.html
+++ b/vr.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> 
+<!DOCTYPE html> <html lang="es"> 
  
 <head>
     <!--  Practica01 – Mi Blog  
@@ -22,9 +22,10 @@
             <li><a href="torneos.html">Torneos</a></li>    
         </ul> 
     </nav>
-    <section>   
+    <section>
+        <h1>Un nundo maravilloso jamas explorado.</h1>
         <article>
-        <h1>Realidad Virtual</h1>
+        <h2>Realidad Virtual</h2>
             <p>La relaidad virtual es la percepcion del hombre de un entorno generado por un software. La relidad virtual 
             combina escenarios y los ejecuta en tiempor real para aumentar la percepcion del usuario</p>
             <p>Las aplicaciones que en la actualidad encontramos de la realidad virtual a actividades de la vida cotidiana son muchas y diversas. <strong>Hay que destacar:</strong><em>la reconstrucción de la herencia cultural, la medicina, la simulación de multitudes y la sensación de presencia</em>.&nbsp;Ultimamente la realidad virtual ha llegado a juegos online en los cuales las personas simulan una segunda vida en un mundo virtual, en lo que el realismo conseguido provoca que los individuos durante un tiempo sean otra persona.</p>
@@ -40,6 +41,7 @@
         </aside>
     </section>
     <section>
+        <h1>Una mezcla de Sensaciones.</h1>
         <aside>
             <p>Entornos colaborativos: Este tipo de realidad es donde varios usuarios pueden interactuar en el mismo entorno virtual.</p>
         </aside>
@@ -51,4 +53,4 @@
     </footer> 
 </body> 
  
-</html
+</html>
