--- a/perifericos.html
+++ b/perifericos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> 
+<!DOCTYPE html> <html lang="es"> 
  
 <head>
     <!--  Practica01 – Mi Blog  
@@ -22,9 +22,10 @@
             <li><a href="torneos.html">Torneos</a></li>    
         </ul> 
     </nav>
-    <section>   
+    <section>
+        <h1>Una extension de la Computadora.</h1>
         <article>
-        <h1>Perifericos</h1>
+        <h2>Perifericos</h2>
         <p>Los perifericos son dispositivos de hardware que sirven para que el usuario pueda interactuar con la 
             la computadora. Los principales dispositivos perifericos son el Mouse y teclado, estos dispositivos permiten que e
             que el usuario pueda interactuar con el computador y su interfaz. El teclado es un dispositovo de hardware que contiene 
@@ -41,6 +42,7 @@
         </aside>
     </section>
     <section>
+        <h1>Una comunicacion rapida y eficiente es la diferencia a la hora de ganar...</h1>
         <aside>
             <p><strong>Doug Engelbart, creador del ratón de computadora.</strong> El inventor estadounidense desarrolló el ratón de computadora en la década de 1960 y lo patentó en 1970.
             </p>
@@ -54,4 +56,4 @@
     
 </body> 
  
-</html
+</html>
