--- a/torneos.html
+++ b/torneos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> 
+<!DOCTYPE html> <html lang="es"> 
  
 <head>
     <!--  Practica01 – Mi Blog  
@@ -22,9 +22,10 @@
             <li><a href="torneos.html">Torneos</a></li>    
         </ul> 
     </nav>
-    <section>   
+    <section>
+        <h1>Pon a Prueba Tus habilidades</h1>
         <article>
-        <h1>Torneos de Videojuegos</h1>
+        <h2>Torneos de Videojuegos</h2>
             <p>Los torneos de videojuegos en los ultimos años a tenido un gran crecimento devido a las nuevas tecnologias y
                 al uso duario en la tecnologia. Lod diferentes avances tecnologicos nos permiten tener equipos que nos permiten
                 realizar diferentes acctividades. Durante la ultima decada los videojuegos han tenido una gran acojida
@@ -45,6 +46,7 @@
         </aside>
     </section>
     <section>
+        <h1>Coviertete en un un jugador Profesional.</h1>
         <aside>
             <p>En 2013, el canadiense Danny "Shiphtur" Le se convirtió en el primer jugador profesional de League of Legends en recibir un visado P-1A de Estados Unidos, categoría para los atletas reconocidos internacionalmente.</p>
         </aside>
@@ -56,4 +58,4 @@
     </footer>
 </body> 
  
-</html
+</html>
