--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             <li><a href="torneos.html">Torneos</a></li>    
         </ol> 
     </nav>
-    <section> 
-        <h1>Los Videojuegos, Un Mundo inexplorado...</h1>
+    <section>
+        <header>
+            <a href="videojuegos.html#videoref"><h1>Los Videojuegos, Un Mundo inexplorado...</h1></a>
+        </header>
         <article>
             <a href="index.html"><h2>El inicio de este mundo...</h2></a>
         <p>Un Mundo donde laimaginacion es el unico limite</p>
@@ -50,7 +52,10 @@
         </aside>
     </section>
     <section>
-        <h1>Listo Para Empezar A Jugar...</h1>
+        <header>
+            <a href="torneos.html#torneosref"><h1>Listo Para Empezar A Jugar...</h1></a>
+        </header>
+        
         <article>
         <a href="perifericos.html#refper"><h2>Perifericos</h2></a>
         <p>Un aliado al momento de cualquier partida, la comodidad y la precision son muy importantes a la hora de jugar.</p>
@@ -76,7 +81,8 @@
     </section>
     <footer>Yupanki Medina Malki Katari &nbsp;
         &#8226;  Universidad Pilitecnica salesiana &#8226; <br/>
-        <a href="mailto:malkiyupanki12@hotmail.com">malkiyupanki12@hotmail.com</a>&nbsp;&nbsp;Telefono:&nbsp;<a href="tel:098-286-5431">098-286-5431 </a>
+        <a href="mailto:malkiyupanki12@hotmail.com">malkiyupanki12@hotmail.com</a>&nbsp;&nbsp;Telefono:&nbsp;
+        <a href="tel:098-286-5431">098-286-5431 </a>
         &nbsp; &copy; Todos los derechos Reservados.
     </footer> 
 </body> 
