Practica01-Mi-Blog

--- a/consolas.html
+++ b/consolas.html
@@ -27,12 +27,11 @@
         <article>
         <h2>Consolas para Videojuegos</h2>
             <p><q>Las consolas de videojuegos en los ultimos años ah tenido un gran creciemto</q>
-        devido a la evolucion y creacion de las nuevas tecnologias. Los diferentes equipos que ejecutan juegos
-        poseen un hardware que les permite realizar dichas ejecuciones de juegos.<em>las consolas pueden llegar a costar cantidades 
+                devido a la evolucion y creacion de las nuevas tecnologias. Los diferentes equipos que ejecutan juegos 
+                poseen un hardware que les permite realizar dichas ejecuciones de juegos.<em>las consolas pueden llegar a costar cantidades 
                 exuberantes</em>. 
-                <b id="consolaref">La mayoria de los juegos hoy en dia requieren de grandes unidades de computo.</b><br/>     
-            </p>
-        <p>Existen diferentes tipos de consolas que sirven para videojuegos, la mayoria de las computadoras
+                <b id="consolaref">La mayoria de los juegos hoy en dia requieren de grandes unidades de computo.</b><br/></p>
+            <p>Existen diferentes tipos de consolas que sirven para videojuegos, la mayoria de las computadoras
             estan pensadas para el trabajo.En los ultimos años grandes companias de computadoras estan sacando al mercado 
             innovadores equipos que tienen el hardware necesario para brindar una maxima satisfaccion a la hora de jugar un 
             videojuego.<i>La felicidad de Ganar no tienen comparacion</i></p>
