--- a/torneos.html
+++ b/torneos.html
@@ -11,51 +11,33 @@
  
 <body> 
     <header>
-        <a href="index.html"><img src="imagenes/video-juegos1.jpg" width="1080" height="580" alt="Curbside Thai" /></a>
     </header>    
     <nav>
         <ul>       
-            <li><a href="videojuegos.html">Videojuegos</a></li>       
-            <li><a href="consolas.html">Consolas</a></li>       
-            <li><a href="perifericos.html">Perifericos</a></li>       
-            <li><a href="vr.html">VR</a></li>       
-            <li><a href="torneos.html">Torneos</a></li>    
+            <li><a></a></li>    
         </ul> 
     </nav>
     <section>
-        <h1>Pon a Prueba Tus habilidades</h1>
+        <h1></h1>
         <article>
-        <h2>Torneos de Videojuegos</h2>
-            <p>Los torneos de videojuegos en los ultimos años a tenido un gran crecimento devido a las nuevas tecnologias y
-                al uso duario en la tecnologia. Lod diferentes avances tecnologicos nos permiten tener equipos que nos permiten
-                realizar diferentes acctividades. Durante la ultima decada los videojuegos han tenido una gran acojida
-                de tal manera que se generan eventos a nivel mundial de torneos de Videojuegos.
-            </p>
-            <p>El uso de los videojuegos es tan variado, que se utiliza para la eduacacion, medicina y principalmente el entretenimineto,
-            hoy en dia los jovenes pasan horas jugando videojuegos y en los ultimos años los juegos en linea han tenido un crecimineto importante, pues los juegos en equipo son los mas solicitados por los usuarios</p>
-            <p id="torneosref">A nivel mundial se realizan diferentes torneos de videojuegos, el torneo principal es realizado por EA sports que es la
-            compania organizadora de la competencia mas grande del mundo, donde jugadores de diferentes partes del mundo se reunen para
-            poner a prueba sus habilidades frente a una PC.</p>
-            <img src="imagenes/torneos.jpg" alt=""/>
+        <h2></h2>
+            <p></p>
+            <img />
         </article>
         <aside>
-            <p>Una de las primeras competencias conocidas de videojuegos tuvo lugar el 19 de octubre de 1972 en la Universidad de Stanford para el juego Spacewar.</p>
+            <p></p>
         </aside>
         <aside>
-            <p>Durante los 1970s y los 1980s, los jugadores de video juegos y los torneos comenzaron a aparecer en sitios de internet y revistas populares como Life y Time.</p>
+            <p></p>
         </aside>
     </section>
     <section>
-        <h1>Coviertete en un un jugador Profesional.</h1>
+        <h1></h1>
         <aside>
-            <p>En 2013, el canadiense Danny "Shiphtur" Le se convirtió en el primer jugador profesional de League of Legends en recibir un visado P-1A de Estados Unidos, categoría para los atletas reconocidos internacionalmente.</p>
+            <p></p>
         </aside>
     </section>
-    <footer>Yupanki Medina Malki Katari &nbsp;
-        &#8226;  Universidad Pilitecnica salesiana &#8226; <br/>
-        <a href="mailto:malkiyupanki12@hotmail.com">malkiyupanki12@hotmail.com</a>&nbsp;&nbsp;Telefono:&nbsp;<a href="tel:098-286-5431">098-286-5431 </a>
-        &nbsp; &copy; Todos los derechos Reservados.
+    <footer>
     </footer>
-</body> 
- 
+</body>  
 </html>
