Practica01-Mi-Blog

--- a/consolas.html
+++ b/consolas.html
@@ -28,13 +28,13 @@
         <h2>Consolas para Videojuegos</h2>
             <p><q>Las consolas de videojuegos en los ultimos años ah tenido un gran creciemto</q>
                 devido a la evolucion y creacion de las nuevas tecnologias. Los diferentes equipos que ejecutan juegos 
-                poseen un hardware que les permite realizar dichas ejecuciones de juegos.<em>las consolas pueden llegar a costar cantidades 
+                poseen un hardware que les permite realizar dichas ejecuciones de juegos.<em>&nbsp;las consolas pueden llegar a costar cantidades 
                 exuberantes</em>. 
                 <b id="consolaref">La mayoria de los juegos hoy en dia requieren de grandes unidades de computo.</b><br/></p>
             <p>Existen diferentes tipos de consolas que sirven para videojuegos, la mayoria de las computadoras
-            estan pensadas para el trabajo.En los ultimos años grandes companias de computadoras estan sacando al mercado 
+            estan pensadas para el trabajo.&nbsp;En los ultimos años grandes companias de computadoras estan sacando al mercado 
             innovadores equipos que tienen el hardware necesario para brindar una maxima satisfaccion a la hora de jugar un 
-            videojuego.<i>La felicidad de Ganar no tienen comparacion</i></p>
+            videojuego.<i>&nbsp;La felicidad de Ganar no tienen comparacion</i></p>
             
         <table>
             <tr>
@@ -78,6 +78,12 @@
     </section>
     <section>
         <h1>Una buena computadora te da mayores oportunidades.</h1>
+        <article>
+            <p>La II guerra mundial provoco una enorme demanda de desarrollos informáticos, lo que dio como resultado la ENIAC (Electronic
+                Numerical Integrator And Calculator), que funcionaba a válvulas y fue la primera computadora electrónica de propósito general. En 
+                la acutailidas las computadoras son mas complejas y ocupan menosespacio, brindando asi al ser humano uno de los mas grandes entreteniminetos de la historia los videojuegos.
+            </p>
+        </article>
         <aside>
             <p><strong>Computadoras Gamer</strong>: Este termino es usado para describir aquellos equipos que son diseñados especificamente para videojuegos, pues los procesadores que incorporan al igual que la refrigeracion que necesigtan son muy altas. Este tipo de conputadoras integran tarjetas grafias que ayudan a la correcta ejecucion del videojuego.</p>
         </aside>
