--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         </header>
         <article>
             <a href="index.html"><h2>El inicio de este mundo...</h2></a>
-        <p>Un Mundo donde laimaginacion es el unico limite</p>
-         <p>La realidad se combina con la ficcion para formar mundos maravillos e incomparables
+        <p>Un Mundo donde la imaginación es el unico limite</p>
+         <p>La realidad se combina con la ficción para formar mundos maravillos e incomparables
             donde se puede construir lo que mas uno se imagine. El mundo de la tencologia es tan amplio que cada dia se descubre
             nuevas cosas.</p>
         </article>
         <article>
             <a href="videojuegos.html#videoref"><h2>Videojuegos</h2></a>
             <p>La ficcion juega un papel importante en el mundo de los videojuegos, la imaginacion nos ayuda a crear 
-            cualquir cosa y la tecnologia nos ayuda hacerla realidad.</p>
+            cualquir cosa y la tecnologia nos ayuda hacerlo realidad.</p>
             <img src="imagenes/videojuegosp.jpg"  width="1080" height="580" alt=""/>
         </article>
         <article>
@@ -48,7 +48,7 @@
             <p><em>El Escape del mundo hacia la realidad...</em></p>
         </aside>
         <aside>
-            <p><em>La creacion de este mundo no tiene limites, los limites los pones tu</em></p>
+            <p><em>La creacion de este mundo no tiene limites, los limites los pones tu.</em></p>
         </aside>
     </section>
     <section>
@@ -57,8 +57,8 @@
         </header>
         
         <article>
-        <a href="perifericos.html#refper"><h2>Perifericos</h2></a>
-        <p>Un aliado al momento de cualquier partida, la comodidad y la precision son muy importantes a la hora de jugar.</p>
+            <a href="perifericos.html#refper"><h2>Perifericos</h2></a>
+            <p>Un aliado al momento de cualquier partida, la comodidad y la precision son muy importantes a la hora de jugar.</p>
             <img src="imagenes/perifericosp.jpg"  width="1080" height="580" alt=""/>
         </article>
         <article>
@@ -73,9 +73,8 @@
         </article>
         
         <aside>
-            <p>
-                Los videojuegos, la mueva era del entretenimiento para todo el mundo 
-                al alcanse de tu mano...
+            <p>Los videojuegos, la mueva era del entretenimiento para todo el mundo 
+                al alcanse de tu mano.
             </p>
         </aside>
     </section>
