--- a/perifericos.html
+++ b/perifericos.html
@@ -42,7 +42,13 @@
         </aside>
     </section>
     <section>
-        <h1>Una comunicacion rapida y eficiente es la diferencia a la hora de ganar...</h1>
+        <h1>Una comunicacion rapida y eficiente es la diferencia a la hora de ganar.</h1>
+        <article>
+            <p>Los mouse para videojuegos hoy en dia conocidos como MOUSE GAMER, pues son dispositivos desarrollados especificamente
+            para brindar una mayor presicion a la hora de jugar. En el mercado actual existen diferentes companias que se encargan de 
+            desarrollar este tipo de hardware para computadoras. La demanda de estos dispositivos a crecido debido al 
+            gran evolucion de los videojuegos.</p>
+        </article>
         <aside>
             <p><strong>Doug Engelbart, creador del ratón de computadora.</strong> El inventor estadounidense desarrolló el ratón de computadora en la década de 1960 y lo patentó en 1970.
             </p>
