--- a/torneos.html
+++ b/torneos.html
@@ -24,7 +24,7 @@
         <article>
         <h2>Torneos de Videojuegos</h2>
             <p>Los torneos de videojuegos en los ultimos años a tenido un gran crecimento devido a las nuevas tecnologias y
-                al uso duario en la tecnologia. Lod diferentes avances tecnologicos nos permiten tener equipos que nos permiten
+                al uso duario en la tecnologia. Los diferentes avances tecnologicos nos permiten tener equipos que nos permiten
                 realizar diferentes acctividades. Durante la ultima decada los videojuegos han tenido una gran acojida
                 de tal manera que se generan eventos a nivel mundial de torneos de Videojuegos.
             </p>
@@ -46,6 +46,12 @@
     </section>
     <section>
         <h1>Coviertete en un un jugador Profesional.</h1>
+        <article>
+            <p>Mucho tiempo de sacrificio tiene sus recompensas, hoy en dia existen jugadores profesionales de videojuegos,
+            pues esto al ser como la television entretenimiento tiene un publico detras que lo respalda. Para ser un jugador profesional
+            de los EASports Game es participar en los diferentes torneos que realiza esta empresa, con grandes patrocinadores y grandes 
+            premios en los diferentes torneos.</p>
+        </article>
         <aside>
             <p>En 2013, el canadiense Danny "Shiphtur" Le se convirtió en el primer jugador profesional de League of Legends en recibir un visado P-1A de Estados Unidos, categoría para los atletas reconocidos internacionalmente.</p>
         </aside>
