--- a/videojuegos.html
+++ b/videojuegos.html
@@ -38,7 +38,10 @@
         </aside>
     </section>
     <section>
-        <h1>En la vida...</h1>
+        <h1>Un mundo Inimaginable.</h1>
+        <article>
+            <p>El primer videojuego famoso fue PAC-MAN, el japonés Toru Iwatani, lo diseñó con el objetivo de crear un juego que pudiera jugar todo el mundo, sobre todo las mujeres, porque aquel entonces no tenían juegos que sean de sus gustos. La mayoria de juegos comensaron con simulaciones para el ejercito por lo que mayoritariamente tenia un mercado masculino. En la actualidad tenemos jugadoras profesionales de videojuegos.</p>
+        </article>
         <aside>
             <p id="videoref">Los videojuegos ayudan a incrementar tus reflejos    
             </p>
