--- a/vr.html
+++ b/vr.html
@@ -28,7 +28,7 @@
         <h2>Realidad Virtual</h2>
             <p>La relaidad virtual es la percepcion del hombre de un entorno generado por un software. La relidad virtual 
             combina escenarios y los ejecuta en tiempor real para aumentar la percepcion del usuario</p>
-            <p>Las aplicaciones que en la actualidad encontramos de la realidad virtual a actividades de la vida cotidiana son muchas y diversas. <strong>Hay que destacar:</strong><em>la reconstrucción de la herencia cultural, la medicina, la simulación de multitudes y la sensación de presencia</em>.&nbsp;Ultimamente la realidad virtual ha llegado a juegos online en los cuales las personas simulan una segunda vida en un mundo virtual, en lo que el realismo conseguido provoca que los individuos durante un tiempo sean otra persona.</p>
+            <p>Las aplicaciones que en la actualidad encontramos de la realidad virtual a actividades de la vida cotidiana son muchas y diversas. <strong>Hay que destacar:</strong><em>&nbsp;la reconstrucción de la herencia cultural, la medicina, la simulación de multitudes y la sensación de presencia</em>.&nbsp;Ultimamente la realidad virtual ha llegado a juegos online en los cuales las personas simulan una segunda vida en un mundo virtual, en lo que el realismo conseguido provoca que los individuos durante un tiempo sean otra persona.</p>
             <p>La realidad virtual se encuentra en su mejor momento. Los cascos de RV como Oculus, HTC o Sony ya han alcanzado un nivel mundial. Ello se debe en parte por los precios que están bajando, lo que hacen más accesible  esta tecnología.</p>
             <img src="imagenes/vr.jpeg" alt=""/>
             
@@ -42,6 +42,9 @@
     </section>
     <section>
         <h1>Una mezcla de Sensaciones.</h1>
+        <article>
+            <p>La realidad virtual se utiliza en diferentes ambitos, el principal uso que se le da es cientiﬁco y militar. Cientiﬁco porque gracias a los hambientes virtuales se puede conocer mejor las partes de un ser humano,o le permite viajar a traves del ADN. En la educacion ayuda aque se generen hambientes colaborativos para que los estudiantes puedan aprender de una mejor manera. Gracias a la tecnologia en la medicina se pueden generar hambientes virtuales paraque asi los profecionales aprendan y ganen nuevas habilidades pues al ser virtual no afecta a ninguna persona.</p>
+        </article>
         <aside>
             <p>Entornos colaborativos: Este tipo de realidad es donde varios usuarios pueden interactuar en el mismo entorno virtual.</p>
         </aside>
